@@ -179,14 +179,16 @@ int fuzzygridder1d(double *x, double *data, unsigned int n,
 
     /* warn the user in case more than half the data points where out
      *  of the gridding area */
-    if (noutofbounds > n / 2) {
-        fprintf(stdout, "XU.FuzzyGridder1D(c): more than half of the "
+    if (flags & VERBOSE) {
+        if (noutofbounds > n / 2) {
+            fprintf(stdout, "XU.FuzzyGridder1D(c): more than half of the "
                         "datapoints out of the data range, consider regridding"
                         " with extended range!\n");
-    }
-    else if (flags & VERBOSE) {
-        fprintf(stdout, "XU.FuzzyGridder1D(c): %d datapoints out of the data "
+        }
+        else {
+            fprintf(stdout, "XU.FuzzyGridder1D(c): %d datapoints out of the data "
                         "range!\n", noutofbounds);
+        }
     }
 
     return 0;
@@ -320,10 +322,16 @@ int gridder1d(double *x, double *data, unsigned int n,
 
     /* warn the user in case more than half the data points where out
      *  of the gridding area */
-    if (noutofbounds > n / 2) {
-        fprintf(stdout, "XU.Gridder1D(c): more than half of the datapoints "
-                        "out of the data range, consider regridding with "
-                        "extended range!\n");
+    if (flags & VERBOSE) {
+        if (noutofbounds > n / 2) {
+            fprintf(stdout, "XU.Gridder1D(c): more than half of the "
+                        "datapoints out of the data range, consider regridding"
+                        " with extended range!\n");
+        }
+        else {
+            fprintf(stdout, "XU.Gridder1D(c): %d datapoints out of the data "
+                        "range!\n", noutofbounds);
+        }
     }
 
     return 0;
