@@ -255,10 +255,16 @@ int fuzzygridder3d(double *x, double *y, double *z, double *data,
 
     /* warn the user in case more than half the data points where out
      * of the gridding area */
-    if (noutofbounds > n / 2) {
-        fprintf(stdout, "XU.FuzzyGridder3D(c): more than half of the "
-                "datapoints out of the data range, consider regridding with "
-                "extended range!\n");
+    if (flags & VERBOSE) {
+        if (noutofbounds > n / 2) {
+            fprintf(stdout,"XU.FuzzyGridder3D(c): more than half of the datapoints"
+                        " out of the data range, consider regridding with"
+                        " extended range!\n");
+        }
+        else {
+            fprintf(stdout, "XU.FuzzyGridder3D(c): %d datapoints out of the data "
+                        "range!\n", noutofbounds);
+        }
     }
 
     return 0;
@@ -416,10 +422,16 @@ int gridder3d(double *x, double *y, double *z, double *data, unsigned int n,
 
     /* warn the user in case more than half the data points where out
      * of the gridding area */
-    if (noutofbounds > n / 2) {
-        fprintf(stdout, "XU.Gridder3D(c): more than half of the datapoints "
-                "out of the data range, consider regridding with extended "
-                "range!\n");
+    if (flags & VERBOSE) {
+        if (noutofbounds > n / 2) {
+            fprintf(stdout,"XU.Gridder3D(c): more than half of the datapoints"
+                        " out of the data range, consider regridding with"
+                        " extended range!\n");
+        }
+        else {
+            fprintf(stdout, "XU.Gridder3D(c): %d datapoints out of the data "
+                        "range!\n", noutofbounds);
+        }
     }
 
     return 0;
