@@ -1,3 +1,6 @@
+* make C-code respect the VERBOSITY. C-Code should now be silent with
+  VERBOSITY<INFO_ALL. Otherwise lots of info is printed. #145
+* remove set_bit/clear_bit functions in favor of using enum.IntFlag
 * use plain pytest in the CI integration (no code change in the package)
 * remove build_doc target for setup.py, use sphinx (see builddocs pipeline)
 
